fix donate button to not break on smaller sized screens

--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ nav li {
 }
 
 .donate {
-  width: 40%;
+  padding: 5px;
   font-size: 50px;
   color: white;
   background-color: red;
@@ -406,6 +406,7 @@ footer {
 
 #footer-right .donate {
   border-color: white;
+  font-size: 35px;
 }
 
 #footer-right p {
